# solspybot

./: pyproject.toml
front/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
front/src/: App.css  App.tsx  index.css  main.tsx
front/src/pages/: bot_management.css  bot_management.tsx  home.css  home.tsx  login.css  login.tsx  profile.css  profile.tsx  wallet_stats.css  wallet_stats.tsx
sol-spy-app/: .env  env  env.template  main.py
sol-spy-app/api/: __init__.py  api_init_helper.py  bitquery_api.py  helius_api.py  jupiter_api.py  raydium_api.py  solana_api.py
sol-spy-app/api/routers/: auth_utils.py  bot_wallet_route.py  copy_traiding_route.py  tracked_statistics_route.py  tracked_wallet_route.py  user_route.py
sol-spy-app/core/: config.py  db_helper.py
sol-spy-app/core/dao/: db_queries.py
sol-spy-app/core/models/: auth_token.py  base.py  bot_log.py  bot_wallet.py  my_wallet_transaction.py  sniper_target.py  tracked_statistics.py  tracked_wallet.py  user.py  wallet_token.py  wallet_transaction.py
sol-spy-app/core/service/: TradeAnalyzer.py  bot_wallet_service.py  copy_traiding_service.py  tracked_statistics_service.py  tracked_wallet_service.py  wallet_token_service.py  worker_service.py
