[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python="^3.12"
solana = "^0.36.3"
fastapi = "^0.115.8"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.7.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
asyncpg = "^0.30.0"
aiohttp = "^3.11.12"
gql = "^3.5.0"
python-decouple = "^3.8"
base58 = "^2.1.1"
aiosqlite = "^0.21.0"
apscheduler = "^3.11.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.10"
